# identigen-cpp

./: .gitignore  CMakeLists.txt  LICENSE  conandata.yml
src/main/cpp/: CMakeLists.txt
src/main/cpp/io/skizzay/identigen/: buffer.h  hash_combine.h  is_template.h  key.h  timestamp_provider.h  value_provider.h
src/test/cpp/: CMakeLists.txt
src/test/cpp/io/skizzay/identigen/: buffer.t.cpp  is_template.t.cpp  timestamp_provider.t.cpp  value_provider.t.cpp
